--- a/src/pages.html
+++ b/src/pages.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Programing</title>
     <link rel="shortcut icon" href="./" />
-    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Project # 1 - AJAX</h1>
     <h2>Aplicación de Consola</h2>
     <p>Para ver el funcionamiento de la aplicación, porfavor
         revisar la consola del navegador.</p>
-    
+
     <!--mensaje temporal <br>
         Crear una pantalla donde se pueden crear menús  a modo de adinstración de sistema
         <br> y se le pueen anexar roles y darle permisos a los usuarios de ver ciertos menus o no <br>los menús tienen tre categorias, 0, 1 y 2, las cuales dan alución a padre inicial, padre n importa el nivel sin contar con recurso y ya el item que redireccioan a una pantalla respectivamente. -->
+    <style>
+        * {
+            color: white;
+            background-color: black;
+        }
+
+        p {
+            font-size: 25px;
+        }
+    </style>
+
     <script type="module" src="./index.js"></script>
 </body>
+
 </html>
