--- a/src/pages.html
+++ b/src/pages.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header>Project # 1 of JS</header>
+
+<!--mensaje temporal <br>
+        Crear una pantalla donde se pueden crear menús  a modo de adinstración de sistema
+        <br> y se le pueen anexar roles y darle permisos a los usuarios de ver ciertos menus o no <br>los menús tienen tre categorias, 0, 1 y 2, las cuales dan alución a padre inicial, padre n importa el nivel sin contar con recurso y ya el item que redireccioan a una pantalla respectivamente. -->
+    
     <main id="body-document">
 
         <div class="card"></div>
